[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.isort]
profile = "black"

[project]
name = "cplot"
authors = [{name = "Nico Schlömer", email = "nico.schloemer@gmail.com"}]
description = "Plot complex-valued functions"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Matplotlib",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Visualization",
]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
  "matplotlib",
  "matplotx[all] >= 0.2.4",
  "npx",
  "numpy >= 1.20.0",
]

[project.optional-dependencies]
all = ["meshzoo", "pyvista"]

[project.urls]
Code = "https://github.com/nschloe/cplot"
Issues = "https://github.com/nschloe/cplot/issues"
Funding = "https://github.com/sponsors/nschloe"
