[metadata]
name = cplot
version = 0.3.1
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Plotting tools for complex-valued functions
url = https://github.com/nschloe/cplot
project_urls =
    Code=https://github.com/nschloe/cplot
    Issues=https://github.com/nschloe/cplot/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    colorio[all]
    matplotlib
    numpy
python_requires = >=3.5
setup_requires =
    setuptools>=42
    wheel
