[metadata]
name = cplot
version = 0.5.1
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Plot complex-valued functions
url = https://github.com/nschloe/cplot
project_urls =
    Code=https://github.com/nschloe/cplot
    Issues=https://github.com/nschloe/cplot/issues
    Funding=https://github.com/sponsors/nschloe
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
classifiers =
    Development Status :: 4 - Beta
    Framework :: Matplotlib
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
package_dir =
    =src
packages = find:
install_requires =
    colorio >= 0.7.0, < 0.8.0
    matplotlib
    numpy >= 1.20.0
python_requires = >=3.7

[options.packages.find]
where=src
